welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:20: error: ';' expected but ')' found.
  setPos(1,getY()-1))
                    ^